--- a/proyecto-final-coder/index.html
+++ b/proyecto-final-coder/index.html
@@ -25,7 +25,7 @@
                 </label>
                 <ul class="content_nav">
                     <li><a href="./pages/proyectos.html">PROYECTOS</a></li>
-                    <li><a href="./pages/info.html">CONTACTO</a></li>
+                    <li><a href="./pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
