--- a/proyecto-final-coder/index.html
+++ b/proyecto-final-coder/index.html
@@ -8,7 +8,9 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>MiPortafolio</title>
+    <title>MiPortafolio|Front-End Developer</title>
+    <meta name="description"
+        content="Aqui podras ver el portafolio de un Front-End Developer, donde encontraras proyectos en los cual ha trabajado.">
 </head>
 
 <body>
@@ -36,7 +38,7 @@
                 <div class="row">
                     <div class="col-md">
                         <div class="card">
-                            <img src="./images/e-commerce.png" class="card-img-top" alt="...">
+                            <img src="./images/e-commerce.webp" class="card-img-top" alt="E-Commerce de un empredimiento de ropa deportiva">
                             <div class="card-body">
                                 <h4 class="card-title">E-Commerce</h4>
                                 <p class="card-text">Un E-Commerce de un empredimiento de venta de ropa deportiva.
@@ -48,7 +50,7 @@
                     </div>
                     <div class="col-md">
                         <div class="card">
-                            <img src="./images/paginas-recetas.png" class="card-img-top" alt="...">
+                            <img src="./images/paginas-recetas.webp" class="card-img-top" alt="Proyecto de una pagina de recetas">
                             <div class="card-body">
                                 <h4 class="card-title">Pag. de Recetas</h4>
                                 <p class="card-text">Una pagina de recetas donde podras cargar y visualizar recetas
@@ -61,7 +63,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer_index">
         <p class="footer_parrafo">Muchas gracias por visitar MiPortafolio!.com</p>
     </footer>
 </body>
