--- a/proyecto-final-coder/pages/proyecto-ecommerce.html
+++ b/proyecto-final-coder/pages/proyecto-ecommerce.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
     <title>MiPortafolio-ECommerce</title>
+    <meta name="description" content="Un proyecto sobre un E-Commerce de indumentaria deportiva">
 </head>
 
 <body>
@@ -50,10 +51,10 @@
                             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../images/e-commerce.png" class="d-block w-100" alt="...">
+                                        <img src="../images/e-commerce.webp" class="d-block w-100" alt="Inicio del E-Commerce de ropa deportiva">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../images/e-commerce-segunda.png" class="d-block w-100" alt="...">
+                                        <img src="../images/e-commerce-segunda.webp" class="d-block w-100" alt="Seccion de articulos del e-commerce">
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +64,7 @@
             </div>
         </section>
     </main>
-    <footer>
+    <footer class="footer_ecommerce">
         <p class="footer_parrafo">Muchas gracias por visitar MiPortafolio!.com</p>
     </footer>
 </body>
