3ra entrega proyecto final
modifique varias cosas y que quedan seguir modificando

--- a/proyecto-final-coder/pages/proyecto-ecommerce.html
+++ b/proyecto-final-coder/pages/proyecto-ecommerce.html
@@ -26,8 +26,8 @@
                     <div class="burger"></div>
                 </label>
                 <ul class="content_nav">
-                    <li><a href="./pages/proyectos.html">PROYECTOS</a></li>
-                    <li><a href="./pages/info.html">CONTACTO</a></li>
+                    <li><a href="/pages/ideas.html">IDEAS</a></li>
+                    <li><a href="/pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
         </div>
