--- a/proyecto-final-coder/index.html
+++ b/proyecto-final-coder/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
-    <title>MiPortafolio|Front-End Developer</title>
+    <title>MiPortafolio | Front-End Developer</title>
     <meta name="description"
         content="Aqui podras ver el portafolio de un Front-End Developer, donde encontraras proyectos en los cual ha trabajado.">
 </head>
@@ -26,7 +26,7 @@
                     <div class="burger"></div>
                 </label>
                 <ul class="content_nav">
-                    <li><a href="./pages/proyectos.html">PROYECTOS</a></li>
+                    <li><a href="./pages/ideas.html">IDEAS</a></li>
                     <li><a href="./pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
