entrega proyecto final
modifique todo el proyecto para que cumpliera con las consignas indicadas.

--- a/proyecto-final-coder/pages/contacto.html
+++ b/proyecto-final-coder/pages/contacto.html
@@ -1,13 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MiPortafolio!-Contacto</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
+        integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/style.css">
+    <title>MiPortafolio-Contacto</title>
+    <meta name="description" content="Aqui podras ponerte en contacto y vizualizar el perfil del programador.">
 </head>
+
 <body>
-    <h1>ESTA EN MANTENIMIENTO :)</h1>
-    <a href="../index.html">Volver al inicio</a>
+    <header>
+        <div class="container_nav">
+            <nav class="nav_checkbox">
+                <a href="../index.html" class="logo">
+                    <h2 class="logo">Mi Portafolio!</h2>
+                </a>
+                <input type="checkbox" id="" class="tab-nav">
+                <label for="tab-nav" class="label">
+                    <div class="burger"></div>
+                    <div class="burger"></div>
+                    <div class="burger"></div>
+                </label>
+                <ul class="content_nav">
+                    <li><a href="/pages/ideas.html">IDEAS</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <section class="content_section">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-6">
+                                <div class="contact_text">
+                                    <h2>Quien soy?</h2>
+                                    <p>Soy Augusto Sáez, Front-End Developer, tengo 20 años, soy de Mendoza, Argentina.</p>
+                                    <h3>Que conocimientos tengo?</h3>
+                                    <p>He hecho varios cursos en los cuales he aprendido a trabajar con JAVA, MySQL, HTML, CSS,
+                                        Figma y SASS</p>
+                                    <h3>A que aspiro?</h3>
+                                    <p>Gracias a los estudios que he realizado, me gustaria desarrollarme profesionalmente en el
+                                        ambito del Desarrollo Web Front-End.</p>
+                                    <h4>Muchas gracias por visitar mi portafolio!</h4>
+                                </div>
+                        </div>
+                        <div class="col-md" style="height:10%;">
+                            <div class="carta_presentacion">
+                                <div class="card">
+                                    <img src="../images/linkedin-perfil.png" class="card-img-top"
+                                        alt="Perfil de LinkedIn de Augusto Sáez.">
+                                    <div class="card-body">
+                                        <h5 class="card-title">LinkedIn</h5>
+                                        <p class="card-text">Augusto Román Sáez</p>
+                                        <p class="card-text">Mendoza, Argentina</p>
+                                        <p class="card-text">20 años</p>
+                                        <p class="card-text">Java, MySQL, HTML, CSS, SASS</p>
+                                        <a href="https://www.linkedin.com/in/augusto-roman-saez/" class="btn btn-primary">Ir al perfil</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+        </section>
+    </main>
+    <footer class="footer_ecommerce">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h4 class="logo_footer">Gracias por visitar MiPortafolio!</h4>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_pages">
+                        <li><a class="lista_pages_boton" href="/pages/ideas.html">IDEAS</a></li>
+                        <li><a href="/pages/contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_redes">
+                        <li><a href="https://www.instagram.com/">INSTAGRAM</a></li>
+                        <li><a href="https://es-la.facebook.com/">FACEBOOK</a></li>
+                        <li><a href="https://github.com/">GITHUB</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
