--- a/proyecto-final-coder/index.html
+++ b/proyecto-final-coder/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="style/style.css">
     <title>MiPortafolio | Front-End Developer</title>
     <meta name="description"
         content="Aqui podras ver el portafolio de un Front-End Developer, donde encontraras proyectos en los cual ha trabajado.">
@@ -34,38 +34,90 @@
     </header>
     <main>
         <section class="content_section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md">
-                        <div class="card">
-                            <img src="./images/e-commerce.webp" class="card-img-top" alt="E-Commerce de un empredimiento de ropa deportiva">
-                            <div class="card-body">
-                                <h4 class="card-title">E-Commerce</h4>
-                                <p class="card-text">Un E-Commerce de un empredimiento de venta de ropa deportiva.
-                                    Totalmente personalizado y acorde a lo pedido por el cliente.
-                                </p>
-                                <a href="./pages/proyecto-ecommerce.html" class="btn btn-primary">Ver proyecto</a>
+            <article class="informacion_bienvenida">
+                <h2 class="titulo_texto_inicio">Bienvenidos a MiPortafolio!</h2>
+                <p class="texto_inicio">Esta pagina web fue creada con la intencion de proporcionar y brindar
+                    informacion de mis habilidades en el mundo laboral y programador, ademas, van a poder brindarme
+                    ideas para proximos proyectos!
+                </p>
+                <p class="texto_inicio_dos">Soy Augusto Sáez, Front-End Developer, tengo 20 años y he realizado varios
+                    proyectos que me gustaria compartirles.</p>
+                <h4 class="titulo_lista_herramientas">Las herramientes que utilice:</h4>
+                <ul class="lista_herramientas">
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>SASS</li>
+                </ul>
+                <div class="imagen_inicio">
+                    <img class="img_html" src="./images/html-logo.png" alt="logo html">
+                    <img class="img_html" src="./images/css-logo.png" alt="logo css">
+                    <img class="img_html" src="./images/sass-logo.png" alt="logo sass">
+                </div>
+            </article>
+        </section>
+        <section class="section_info_index">
+            <article class="wrapper">
+                <div class="container">
+                    <h2 class="titulo_section_cards">Aqui vas a poder encontrar algunos proyectos que realice</h2>
+                    <div class="row">
+                        <div class="col-md">
+                            <div class="card">
+                                <img src="./images/e-commerce.webp" class="card-img-top"
+                                    alt="E-Commerce de un empredimiento de ropa deportiva">
+                                <div class="card-body">
+                                    <h4 class="card-title">E-Commerce</h4>
+                                    <p class="card-text">Un E-Commerce de un empredimiento de venta de ropa deportiva.
+                                        Totalmente personalizado y acorde a lo pedido por el cliente.
+                                    </p>
+                                    <a href="./pages/proyecto-ecommerce.html" class="btn btn-primary">Ver proyecto</a>
+                                </div>
                             </div>
                         </div>
-                    </div>
-                    <div class="col-md">
-                        <div class="card">
-                            <img src="./images/paginas-recetas.webp" class="card-img-top" alt="Proyecto de una pagina de recetas">
-                            <div class="card-body">
-                                <h4 class="card-title">Pag. de Recetas</h4>
-                                <p class="card-text">Una pagina de recetas donde podras cargar y visualizar recetas
-                                    creadas por usuarios.</p>
-                                <a href="./pages/proyecto-recetas.html" class="btn btn-primary">Ver proyecto</a>
+                        <div class="col-md">
+                            <div class="card">
+                                <img src="./images/paginas-recetas.webp" class="card-img-top"
+                                    alt="Proyecto de una pagina de recetas">
+                                <div class="card-body">
+                                    <h4 class="card-title">Pagina de Recetas</h4>
+                                    <p class="card-text">Una pagina de recetas donde podras cargar y visualizar recetas
+                                        creadas por usuarios.</p>
+                                    <a href="./pages/proyecto-recetas.html" class="btn btn-primary">Ver proyecto</a>
+                                </div>
                             </div>
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
         </section>
     </main>
     <footer class="footer_index">
-        <p class="footer_parrafo">Muchas gracias por visitar MiPortafolio!.com</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h4 class="logo_footer">Gracias por visitar MiPortafolio!</h4>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_pages">
+                        <li><a class="lista_pages_boton" href="./pages/ideas.html">IDEAS</a></li>
+                        <li><a href="./pages/contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_redes">
+                        <li><a href="https://www.instagram.com/">INSTAGRAM</a></li>
+                        <li><a href="https://es-la.facebook.com/">FACEBOOK</a></li>
+                        <li><a href="https://github.com/">GITHUB</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
