--- a/proyecto-final-coder/pages/ideas.html
+++ b/proyecto-final-coder/pages/ideas.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/style.css">
     <title>MiPortafolio!-Proyectos</title>
 </head>
 
@@ -25,7 +25,6 @@
                     <div class="burger"></div>
                 </label>
                 <ul class="content_nav">
-                    <li><a href="/pages/ideas.html">IDEAS</a></li>
                     <li><a href="/pages/contacto.html">CONTACTO</a></li>
                 </ul>
             </nav>
@@ -33,10 +32,7 @@
     </header>
     <main>
         <section class="content_section">
-            <h1 class="titulo_form">AQUI PODRAS DEJAR TUS IDEAS PARA PROYECTOS!</h1>
             <div class="form_section">
-                <div>
-                    <div>
                         <form class="formulario_ideas">
                             <div class="form-group">
                                 <label for="exampleFormControlInput1">Email:</label>
@@ -58,14 +54,37 @@
                             </div>
                             <button type="button" class="btn btn-success">Enviar</button>
                         </form>
-                    </div>
-                </div>
             </div>
         </section>
     </main>
-    <footer class="footer_index">
-        <p class="footer_parrafo">Muchas gracias por visitar MiPortafolio!.com</p>
+    <footer class="footer_ecommerce">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h4 class="logo_footer">Gracias por visitar MiPortafolio!</h4>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_pages">
+                        <li><a class="lista_pages_boton" href="/pages/ideas.html">IDEAS</a></li>
+                        <li><a href="/pages/contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_redes">
+                        <li><a href="https://www.instagram.com/">INSTAGRAM</a></li>
+                        <li><a href="https://es-la.facebook.com/">FACEBOOK</a></li>
+                        <li><a href="https://github.com/">GITHUB</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
 
 </html>
