--- a/proyecto-final-coder/pages/proyecto-ecommerce.html
+++ b/proyecto-final-coder/pages/proyecto-ecommerce.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/style.css">
     <title>MiPortafolio-ECommerce</title>
     <meta name="description" content="Un proyecto sobre un E-Commerce de indumentaria deportiva">
 </head>
@@ -36,25 +36,28 @@
         <section class="content_section">
             <div class="container">
                 <div class="row">
-                    <div class="col-lg">
+                    <div class="col-md">
                         <div class="info_proyecto">
                             <h3 class="titulo_proyecto">Información del proyecto</h3>
-                            <p class="texto_info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
-                                deleniti dolor voluptatem
-                                repellendus, unde sint, harum aperiam aspernatur expedita fugiat cumque quae fugit,
-                                sapiente
-                                illum ad dicta sequi facilis consequuntur?</p>
+                            <p class="texto_info">Es un proyecto creado a partir de las necesidades del cliente, donde
+                                tuve que trabajar durante 4 semanas para poder tenerlo listo en tiempo record. Es un
+                                E-Commerce de una
+                                tienda de ropa deportiva, donde podes consultar precios, hacer pedidos y vizualizar el
+                                stock actual de la tienda. Se utilizaron como herramientas Figma y VisualStudioCode,
+                                donde utilice HTML, CSS y SASS.</p>
                         </div>
                     </div>
-                    <div class="col-lg">
+                    <div class="col-md">
                         <div class="imagen_proyecto">
                             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../images/e-commerce.webp" class="d-block w-100" alt="Inicio del E-Commerce de ropa deportiva">
+                                        <img src="../images/e-commerce.webp" class="d-block w-100"
+                                            alt="Inicio del E-Commerce de la tienda de ropa deportiva.">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../images/e-commerce-segunda.webp" class="d-block w-100" alt="Seccion de articulos del e-commerce">
+                                        <img src="../images/e-commerce-segunda.webp" class="d-block w-100"
+                                            alt="Seccion donde podras selecionar el estilo de indumentaria deseada.">
                                     </div>
                                 </div>
                             </div>
@@ -65,6 +68,31 @@
         </section>
     </main>
     <footer class="footer_ecommerce">
-        <p class="footer_parrafo">Muchas gracias por visitar MiPortafolio!.com</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h4 class="logo_footer">Gracias por visitar MiPortafolio!</h4>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_pages">
+                        <li><a class="lista_pages_boton" href="ideas.html">IDEAS</a></li>
+                        <li><a href="contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_redes">
+                        <li><a href="https://www.instagram.com/">INSTAGRAM</a></li>
+                        <li><a href="https://es-la.facebook.com/">FACEBOOK</a></li>
+                        <li><a href="https://github.com/">GITHUB</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
