--- a/proyecto-final-coder/pages/proyecto-recetas.html
+++ b/proyecto-final-coder/pages/proyecto-recetas.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style/style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css"
         integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <link rel="stylesheet" href="../style/style.css">
     <title>MiPortafolio!-Pagina de Recetas</title>
     <meta name="description" content="Un proyecto sobre una pagina de recetas de comida.">
 </head>
+
 <body>
     <header>
         <div class="container_nav">
@@ -37,11 +39,11 @@
                     <div class="col-lg">
                         <div class="info_proyecto">
                             <h3 class="titulo_proyecto">Información del proyecto</h3>
-                            <p class="texto_info">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Mollitia
-                                deleniti dolor voluptatem
-                                repellendus, unde sint, harum aperiam aspernatur expedita fugiat cumque quae fugit,
-                                sapiente
-                                illum ad dicta sequi facilis consequuntur?</p>
+                            <p class="texto_info">Una Pagina de recetas donde podras encontrar recetas hechas por uno o
+                                mas autores. Podras navegar en la web a travez de una interfaz super amigable, podras
+                                buscar por palabras claves, loguearte e interactuar con otros usuarios. Se utilizaron
+                                como herramientas Figma y VisualStudioCode,
+                                donde utilice HTML, CSS y SASS.</p>
                         </div>
                     </div>
                     <div class="col-lg">
@@ -49,10 +51,12 @@
                             <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../images/paginas-recetas.webp" class="d-block w-100" alt="Inicio de la pagina de recetas.">
+                                        <img src="../images/paginas-recetas.webp" class="d-block w-100"
+                                            alt="Inicio de la pagina de recetas.">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../images/pagina-recetas-segunda.webp" class="d-block w-100" alt="Seccion de recetas y tipos de comida.">
+                                        <img src="../images/pagina-recetas-segunda.webp" class="d-block w-100"
+                                            alt="Seccion de recetas y tipos de comida.">
                                     </div>
                                 </div>
                             </div>
@@ -63,7 +67,33 @@
         </section>
     </main>
     <footer class="footer_ecommerce">
-        <p class="footer_parrafo">Muchas gracias por visitar MiPortafolio!.com</p>
+        <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h4 class="logo_footer">Gracias por visitar MiPortafolio!</h4>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_pages">
+                        <li><a class="lista_pages_boton" href="/pages/ideas.html">IDEAS</a></li>
+                        <li><a href="contacto.html">CONTACTO</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm">
+                    <ul class="lista_redes">
+                        <li><a href="https://www.instagram.com/">INSTAGRAM</a></li>
+                        <li><a href="https://es-la.facebook.com/">FACEBOOK</a></li>
+                        <li><a href="https://github.com/">GITHUB</a></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous">
+    </script>
 </body>
+
 </html>
